--- a/src/app/side-navbar/side-navbar.component.html
+++ b/src/app/side-navbar/side-navbar.component.html
@@ -18,16 +18,10 @@
   </mat-form-field> -->
 
   <mat-form-field style="width: 140px">
-    <div class="col-8">
-    </div>
-    <div
-      class="btn admin-addNew-form-permissions my-3"
-      appearance="fill"
-    >
+    <div class="col-8"></div>
+    <div class="btn admin-addNew-form-permissions my-3" appearance="fill">
       <mat-label></mat-label>
-      <mat-select
-        class="admin-addNew-form-permissionsSelect"
-      >
+      <mat-select class="admin-addNew-form-permissionsSelect">
         <mat-option
           *ngFor="let site of sites; let siteIndex = index"
           [value]="site['siteName']"
@@ -183,7 +177,7 @@
     class="admin-sideCol-navCard-controlLine"
     src="../../assets/CommonAssets/ControlMenuLine.svg"
   />
-  <div class="">
+  <div class="" routerLink="/small-cells">
     <div
       class="d-flex"
       [ngClass]="{
