--- a/src/app/components/header/navbar/navbar.component.html
+++ b/src/app/components/header/navbar/navbar.component.html
@@ -115,7 +115,11 @@
 
 <!-- Controls Menu -->
 <mat-menu
-  class="sideNavbar_navCard-triangle aether-ControlsMenu aether-ControlsMenu_navCard p-2"
+  class="
+    sideNavbar_navCard-triangle
+    aether-ControlsMenu aether-ControlsMenu_navCard
+    p-2
+  "
   #ControlsMenu="matMenu"
   xPosition="before"
 >
