--- a/src/app/Modules/settings/dialogs/select-sims/select-sims.component.html
+++ b/src/app/Modules/settings/dialogs/select-sims/select-sims.component.html
@@ -9,7 +9,10 @@
   <div class="row">
     <div class="col-12 p-3">
       <div class="select-sim-container d-flex">
-        <div class="select-sim-container-spacings" *ngFor="let sim of inventorySims">
+        <div
+          class="select-sim-container-spacings"
+          *ngFor="let sim of inventorySims"
+        >
           <div
             class="select-sim-container-simHolder"
             (click)="changeSelection(sim.simIccid)"
