--- a/src/assets/stylesheets/componentStyles/adminpanel.scss
+++ b/src/assets/stylesheets/componentStyles/adminpanel.scss
@@ -82,7 +82,7 @@
 
   &-addUser {
     &-holder {
-      width: 91%
+      width: 91%;
     }
 
     &-Card {
@@ -346,7 +346,7 @@
       padding: 2px;
     }
 
-    &-userDetailsHolder{
+    &-userDetailsHolder {
       max-width: 250px;
     }
 
@@ -360,7 +360,7 @@
       align-items: center;
       position: relative;
       &-delete {
-        border: 1px solid #EF233C;
+        border: 1px solid #ef233c;
         max-width: 250px;
         background: #edf4ff;
         padding: 10px 22px 10px 5px;
@@ -508,7 +508,7 @@
 }
 
 .admin-siteView-doneButtonInactive {
-  color: #A3A3A3;
+  color: #a3a3a3;
   align-self: center;
   text-align: center;
 }
