--- a/src/assets/stylesheets/componentStyles/sideNavbar.scss
+++ b/src/assets/stylesheets/componentStyles/sideNavbar.scss
@@ -90,7 +90,7 @@
 .mat-option:after {
   content: "";
   width: 100%;
-  border-bottom: solid 1px #C9DEFF;
+  border-bottom: solid 1px #c9deff;
   position: absolute;
   left: 0;
   z-index: 1;
