--- a/src/assets/stylesheets/_settings.scss
+++ b/src/assets/stylesheets/_settings.scss
@@ -44,3 +44,32 @@ $uploadTextColor: #004fc4;
 .ml-5 {
   margin-left: 5rem !important;
 }
+
+.add-btn {
+  button {
+    color: #ffffff !important;
+    background: #0063f7 !important;
+    border-radius: 4px !important;
+    text-align: left;
+    margin: 0 auto;
+    display: inherit;
+    position: relative;
+    padding: 10px 12px;
+    // width: 216px;
+  }
+  .button-medium-14 {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 150%;
+    color: red;
+    &::after {
+      content: "+";
+      position: absolute;
+      font-size: 1.5rem;
+      right: 8px;
+      top: 10px;
+    }
+  }
+}
