--- a/src/assets/stylesheets/componentStyles/device-groups.scss
+++ b/src/assets/stylesheets/componentStyles/device-groups.scss
@@ -267,7 +267,7 @@
 }
 .edit-device-goup-form {
   background-color: #fff;
-  position: absolute;
+  // position: absolute;
   top: 48px;
   .edit-section {
     background: #eff1f3;
@@ -298,3 +298,40 @@
 #special {
   display: contents !important;
 }
+
+.ip-domain-box {
+  h4 {
+    margin: 0 0 10px;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 16px;
+  }
+  .mat-form-field-wrapper {
+    height: 48px;
+  }
+  .mat-form-field-flex {
+    background: #eff1f3;
+  }
+  .mat-form-field-infix {
+    background: #ffffff;
+    width: 386px;
+    height: 48px;
+    // border-bottom: 1px solid;
+  }
+  .mat-form-field-label-wrapper {
+    left: 8px;
+    top: -8px;
+  }
+  .mat-select-arrow-wrapper {
+    display: inline-block !important;
+  }
+  .mat-form-field-appearance-fill .mat-form-field-flex {
+    padding: 0;
+  }
+}
+
+// .device-groupName-box {
+
+// }
