--- a/src/assets/stylesheets/componentStyles/sideNavbar.scss
+++ b/src/assets/stylesheets/componentStyles/sideNavbar.scss
@@ -90,9 +90,55 @@
 .mat-option:after {
   content: "";
   width: 100%;
-  border-bottom: solid 1px #C9DEFF;
+  border-bottom: solid 1px #c9deff;
   position: absolute;
   left: 0;
   z-index: 1;
   top: calc(3em - 2px);
+}
+
+.sideNavbar_navCard {
+  .select-site {
+    padding: 0;
+    .mat-form-field-infix {
+      display: flex;
+      flex-wrap: nowrap;
+      flex-direction: row-reverse;
+      .mat-select {
+        padding-left: 20px;
+        .mat-select-value {
+          color: #000 !important;
+          padding-left: 15px !important;
+        }
+        .mat-select-arrow-wrapper {
+          transform: translateY(-10%);
+        }
+      }
+      .mat-form-field-label-wrapper {
+        position: static;
+        width: auto;
+        label {
+          width: 20%;
+          position: absolute;
+          top: 18px;
+          font-family: Inter;
+          font-style: normal;
+          font-weight: 600;
+          font-size: 14px;
+          line-height: 18px;
+          align-items: center;
+          letter-spacing: 0.0375em;
+          color: #0063f7;
+          transform: none !important;
+          margin-top: -18px;
+        }
+      }
+    }
+    .mat-form-field-flex {
+      border: 2px solid #0063f7 !important;
+      background: #fff;
+      border-radius: 4px;
+      padding-top: 5px;
+    }
+  }
 }
