--- a/src/assets/stylesheets/componentStyles/adminpanel.scss
+++ b/src/assets/stylesheets/componentStyles/adminpanel.scss
@@ -82,7 +82,7 @@
 
   &-addUser {
     &-holder {
-      width: 91%
+      width: 91%;
     }
 
     &-Card {
@@ -109,6 +109,12 @@
       height: 5rem;
       margin-left: -6px;
       box-shadow: none !important;
+
+      &-ppic {
+        height: 56px;
+        width: 56px;
+        border-radius: 2rem;
+      }
 
       &-active {
         height: 15px;
@@ -248,6 +254,12 @@
 
       &-profile {
         width: 162px;
+
+        &-style {
+          height: 200px;
+          width: 200px;
+          border-radius: 0.5rem;
+        }
       }
 
       &-upload {
@@ -346,7 +358,7 @@
       padding: 2px;
     }
 
-    &-userDetailsHolder{
+    &-userDetailsHolder {
       max-width: 250px;
     }
 
@@ -359,8 +371,13 @@
       border-radius: 5px;
       align-items: center;
       position: relative;
+      &-img {
+        height: 46px;
+        width: 46px;
+        border-radius: 2rem;
+      }
       &-delete {
-        border: 1px solid #EF233C;
+        border: 1px solid #ef233c;
         max-width: 250px;
         background: #edf4ff;
         padding: 10px 22px 10px 5px;
@@ -490,7 +507,7 @@
 }
 
 .admin-siteView-doneButtonInactive {
-  color: #A3A3A3;
+  color: #a3a3a3;
   align-self: center;
   text-align: center;
 }
