Navbar redirection issue resolved

--- a/src/app/components/header/navbar/navbar.component.html
+++ b/src/app/components/header/navbar/navbar.component.html
@@ -269,7 +269,7 @@
     class="admin-sideCol-navCard-controlLine"
     src="../../assets/CommonAssets/ControlMenuLine.svg"
   />
-  <div class="">
+  <div class="" routerLink="/small-cells">
     <div
       class="d-flex"
       [ngClass]="{
