--- a/src/app/Modules/settings/device-sim/device-sim.component.html
+++ b/src/app/Modules/settings/device-sim/device-sim.component.html
@@ -1,12 +1,12 @@
 <!-- <p>device-sim works!</p> -->
-<div class="container device-sim-view">
+<div class="container-fluid device-sim-view">
   <div class="row">
     <!--left side section-->
-    <div class="col-3">
+    <div class="col-2">
       <aep-side-navbar></aep-side-navbar>
     </div>
     <!--RIGHT SIDE SECTION-->
-    <div class="col-9 right-section">
+    <div class="col-10 right-section">
       <div class="row sec-1">
         <div class="title-tab d-flex">
           <div
@@ -75,6 +75,7 @@
           </mat-card>
           <!--active new device form-->
           <mat-card
+            style="width: 90%"
             class="active-new-device-form my-1 forms-block"
             *ngIf="activeNewDevice"
             [@inOutAnimation]
@@ -243,7 +244,7 @@
         </div>
 
         <!--device+sim view-->
-        <div class="row" *ngFor="let sites of siteConfig">
+        <div class="row" style="width: 98%" *ngFor="let sites of siteConfig">
           <div *ngFor="let device of sites; let deviceIndex = index">
             <mat-card
               class="
