--- a/src/assets/stylesheets/componentStyles/device-sim.scss
+++ b/src/assets/stylesheets/componentStyles/device-sim.scss
@@ -27,6 +27,8 @@
 }
 
 .device-sim-view {
+  // width: 90%;
+  max-width: 90%;
   margin-top: 30px;
   .aether-sideCol-NavCard {
     margin-left: 0 !important;
