--- a/src/assets/stylesheets/componentStyles/adminpanel.scss
+++ b/src/assets/stylesheets/componentStyles/adminpanel.scss
@@ -50,17 +50,23 @@
     &-holder {
       margin-top: 10px;
     }
-
-    &-switch {
-      border: 1px solid transparent;
-      border-radius: 10px;
-      padding: 10px 20px 10px 20px;
-      // margin-top: 15px;
-      &-holder {
+      &-switch-site {
+        border-radius: 8px 0 0 8px;
+        border: 1px solid transparent;
+        // border-radius: 10px;
+        padding: 10px 20px 10px 20px;
+      }
+      &-switch-user {
+        border-radius: 0px 8px 8px 0;
+        border: 1px solid transparent;
+        // border-radius: 10px;
+        padding: 10px 20px 10px 20px;
+      }
+      &-switch-holder {
         margin-top: 6px;
       }
 
-      &-text {
+      &-switch-text {
         color: #3c4257;
         font-family: "Inter", sans-serif;
         font-size: 14px;
@@ -68,7 +74,6 @@
         letter-spacing: 0.01em;
         // margin-top: 5px;
       }
-    }
 
     &-title {
       color: #3c4257 !important;
