--- a/src/app/Modules/settings/admin/admin.component.html
+++ b/src/app/Modules/settings/admin/admin.component.html
@@ -217,8 +217,8 @@
           <mat-card-actions class="bottom-button">
             <div class="admin-addNew-form-lastButtons admin-addnew-group">
               <button
-                class="admin-addNew-form-addButton add-button-gray"
-                type="submit"
+                class="admin-addNew-form-addButton"
+                type="button"
                 mat-raised-button
                 color="primary"
                 (click)="onSubmit(); assignUsersCities()"
@@ -287,7 +287,7 @@
       >
         <button
           class="btn button-medium-14 col-3 admin-addUser-btnCenter1"
-          (click)="AddNew = !AddNew; closeUserViewEdit()"
+          (click)="addNewUser(); closeUserViewEdit()"
         >
           Add new user
         </button>
